# crafted-ptr

./: .gitignore  CMakeLists.txt
include/: my_make_shared.h  my_pointer_cast.h  my_shared_ptr.h  my_weak_ptr.h  shared_count.h  sp_counted_base.h  sp_counted_impl.h
test/: benchmark.cc  test_basic.cc  test_complete.cc  test_control_block.cc  test_custom_deleter.cc  test_cycle.cc  test_make_shared.cc  test_thread_safe.cc  test_weak_ptr.cc
